# HireGuard

./: .env.example  .gitignore  README.md  VERIFIED.md  agent_config.yaml.example  pyproject.toml  run_demo.py  streamlit_app.py
.streamlit/: config.toml
docs/: architecture.html
hireguard/: aiml_client.py  band_client.py  tools.py
hireguard/agents/: _common.py  counsel.py  intake.py  policy.py  risk.py
hireguard/prompts/: counsel.md  intake.md  policy.md  risk.md
hireguard/rules/: ruleset.json
hireguard/samples/: acme_se_role.json  northwind_pm_role.json
submission/: README.md  cover.html  deck.html  explainer.html  explainer_vo.html  render_narrated.py
tests/: test_agents.py  test_seam.py
